# MySwiftAgent

./: .dockerignore  .env.docker  .env.example  .gitattributes  .gitignore  CLAUDE.md  DEVELOPMENT_GUIDE.md  GEMINI.md  README-DOCKER.md  README.md  docker-compose.dev.yml  docker-compose.yml
commonUI/: .env.example  .gitignore  Dockerfile  Home.py  README.md  pyproject.toml
commonUI/.streamlit/: config.toml
commonUI/app/: main.py
commonUI/components/: __init__.py  http_client.py  interface_compatibility_checker.py  job_master_form.py  job_master_merger.py  notifications.py  sidebar.py  task_selector.py  template_manager.py
commonUI/core/: __init__.py  config.py  exceptions.py  template_storage.py
commonUI/data/: myvault_secrets.yaml
commonUI/pages/: 1_📋_JobQueue.py  2_⏰_MyScheduler.py  3_🔐_MyVault.py  4_🗂️_JobMasters.py  5_🚀_Job_Execution.py  6_📊_Job_Statistics.py  7_🔧_Job_Configuration.py  7_🔧_Workflow_Builder.py  8_🔧_TaskMasters.py  9_🔌_InterfaceMasters.py
commonUI/tests/: conftest.py  test_components.py  test_core.py  test_myvault_auth.py
commonUI/tests/integration/: test_api.py
commonUI/tests/unit/: __init__.py
commonUI/workspace/claudecode/: interface-validation-integration-plan.md  interface-validation-phase1-progress.md  interface-validation-ui-design.md  job-task-binding-strategy.md
docs/: ENV_MIGRATION_GUIDE.md  llm-workflow-generation-guide.md  pyproject.toml
docs/app/: main.py
docs/design/: architecture-overview.md  environment-variables.md  logging-policy.md  myvault-integration.md
docs/guide/: DEVELOPMENT_GUIDE.md  DOCKER_GUIDE.md  user-scenarios.md
docs/procedures/: NEW_PROJECT_SETUP.md  README.md
docs/tests/integration/: test_api.py
docs/tests/unit/: test_main.py
docs/workflows/: parallel-development.md
expertAgent/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
expertAgent/aiagent/langgraph/: common.py  util.py
expertAgent/app/: __init__.py  main.py
expertAgent/app/exceptions/: __init__.py  service_exceptions.py
expertAgent/app/middleware/: __init__.py  method_validator.py  response_validator.py
expertAgent/app/schemas/: chat.py  driveSchemas.py  gmailSchemas.py  job_generator.py  marp_report.py  standardAiAgent.py  ttsSchemas.py  utilitySchemas.py  workflow_generator.py
expertAgent/app/services/: __init__.py  ai_agent_service.py  base.py  response_builder.py  retry_policies.py
expertAgent/app/utils/: __init__.py  json_converter.py
expertAgent/core/: config.py  google_creds.py  logger.py  myvault_client.py  openapi_schema_collector.py  secrets.py  test_mode_handler.py
expertAgent/docs/: API_REFERENCE.md  file-reader-progress.md  file-reader-usage-guide.md
expertAgent/mymcp/: stdio_action.py  stdio_explorer.py  stdio_file_reader.py  stdioall.py
expertAgent/mymcp/googleapis/: drive.py  googleapi_services.py
expertAgent/mymcp/specializedtool/: generate_melmaga_script.py
expertAgent/mymcp/tool/: file_reader_processors.py  file_reader_sources.py  file_reader_utils.py  generate_melmaga_script.py  generate_podcast_script.py  google_search_by_gemini.py  google_search_by_serper.py  pdf_processor_advanced.py  tts_and_upload_drive.py
expertAgent/mymcp/tts/: tts.py
expertAgent/mymcp/utils/: chatollama.py  execllm.py  extract_knowledge_from_text.py  file_operation.py  generate_subject_from_text.py  html2markdown.py  html_operation.py
expertAgent/scripts/: e2e_workflow_test.py
expertAgent/tests/: __init__.py  conftest.py
expertAgent/tests/integration/: conftest.py  test_api.py  test_chat_endpoints.py  test_drive_api.py  test_e2e_workflow.py  test_endpoints_simple.py  test_gmail_utility_api.py  test_llm_provider_compatibility.py  test_marp_report_api.py  test_myvault_integration.py  test_response_validator.py  test_test_mode_api.py  test_tts_api.py  test_workflow_generator_api.py
expertAgent/tests/unit/: test_admin_endpoints.py  test_agent_endpoints.py  test_agent_endpoints_force_json.py  test_config.py  test_conversation_store.py  test_drive_endpoints.py  test_drive_upload.py  test_evaluator_node.py  test_evaluator_router.py  test_file_reader_processors.py  test_file_reader_sources.py  test_file_reader_utils.py  test_gmail_enhanced_search.py  test_gmail_readonly.py  test_gmail_schemas.py  test_google_auth_endpoints.py  test_google_creds.py  test_interface_definition_node.py  test_job_generator_agent.py  test_job_generator_endpoints.py  test_job_registration_node.py  test_json_converter.py  test_jsonoutput_agent.py  test_logger.py  test_logger_extended.py  test_marp_report_endpoints.py  test_master_creation_node.py  test_mock_helpers.py  test_myvault_client.py  test_pdf_processor_advanced.py  test_recursion_limit.py  test_requirement_analysis_node.py  test_requirement_clarification.py  test_retry_policies.py  test_routers.py  test_schema_matcher.py  test_schemas.py  test_secrets.py  test_task_data_fetcher.py  test_test_mode_handler.py  (+7 more)
expertAgent/tests/utils/: mock_helpers.py
jobqueue/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
jobqueue/app/: main.py
jobqueue/app/core/: config.py  database.py  merge.py  worker.py
jobqueue/app/models/: __init__.py  interface_master.py  job.py  job_master.py  job_master_interface.py  job_master_task.py  job_master_version.py  result.py  task.py  task_master.py  task_master_interface.py  task_master_version.py
jobqueue/app/schemas/: __init__.py  health.py  interface_master.py  (+8 more)
jobqueue/scripts/: migrate_job_master_workflow.py  migrate_status_lowercase.sh  migrate_tasks_status_lowercase.sh  seed_missing_interfaces.py  seed_phase1_test_data.py
jobqueue/tests/: conftest.py
myVault/: .env.example  Dockerfile  README.md  config.test.yaml  config.yaml  config.yaml.example  pyproject.toml
myVault/app/: __init__.py  main.py
myVault/scripts/: migrate_add_is_default.py
myVault/tests/: conftest.py
myscheduler/: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  pyproject.toml  run_tests.sh  test_trigger.txt
myscheduler/app/: main.py
myscheduler/tests/: conftest.py
(+472 files in other folders)
