[project]
name = "docs"
version = "0.4.0"
description = "Documentation for MySwiftAgent"
authors = [
    {name = "MySwiftAgent Team", email = "noreply@example.com"},
]
# No dependencies needed for documentation-only project

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

# Documentation project doesn't need test configuration or app packages

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"