[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "expertAgent"
version = "0.4.0"
description = "Expert Agent Service for MySwiftAgent"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "MySwiftAgent Team", email = "your.email@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    # LangGraph and LangChain
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "langgraph-sdk>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-anthropic>=0.3.0",
    # MCP and AI providers
    "mcp[cli]>=1.0.0",
    "anthropic>=0.34.0",
    "openai>=1.0.0",
    # Google APIs
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "google-genai>=0.1.0",
    "google-generativeai>=0.8.0",
    # Utilities
    "html2text>=2020.1.16",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "pydub>=0.25.0",
    "python-magic>=0.4.27",
    "jinja2>=3.1.0",
    # Security and encryption
    "cryptography>=41.0.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "S",  # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # FastAPI Depends() in argument defaults is standard practice
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # Allow assert in tests
    "S105",  # Hardcoded passwords in test fixtures
    "S106",  # Hardcoded passwords passed to function
    "S108",  # Insecure temp file/directory usage in tests
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
files = ["app"]
check_untyped_defs = false

# Ignore missing type stubs for third-party libraries
[[tool.mypy.overrides]]
module = [
    "pydub",
    "googleapiclient.*",
    "google_auth_oauthlib.*",
    "langchain_mcp_adapters.*",
    "langchain_google_genai.*",
    "langchain_anthropic.*",
    "langchain_ollama.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "aiagent.langgraph.common",
    "aiagent.langgraph.utilityaiagents.jsonOutput_agent"
]
disable_error_code = ["call-arg"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no LLM API calls, always run)",
    "integration: Integration tests (mocked LLM responses, always run)",
    "e2e: End-to-end tests (real LLM API calls, optional)",
    "llm_required: Tests requiring real LLM API (skip if API key unavailable)",
    "slow: Slow tests (E2E, real API calls)",
]

[tool.coverage.run]
source = ["app", "core"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
